--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^6.0.12",
+    "react-icons": "^4.3.1",
     "validation": "0.0.1"
   },
   "devDependencies": {
