--- a/src/client/package.json
+++ b/src/client/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.24.0",
     "cors": "^2.8.5",
     "react": "^17.0.2",
+    "react-confirm-box": "^1.2.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-json-to-html": "^0.0.6",
