--- a/src/client/package.json
+++ b/src/client/package.json
@@ -7,8 +7,12 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
+    "browser-history": "^1.0.1",
     "cors": "^2.8.5",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.2",
+    "react-bootstrap-form": "^0.1.4-beta6",
     "react-confirm-box": "^1.2.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
