--- a/src/client/package.json
+++ b/src/client/package.json
@@ -16,6 +16,7 @@
     "react-confirm-box": "^1.2.0",
     "react-dom": "^17.0.2",
     "react-dropdown": "^1.9.2",
+    "react-dropdown-now": "^6.0.1",
     "react-icons": "^4.3.1",
     "react-json-to-html": "^0.0.6",
     "react-router-dom": "^5.3.0",
