--- a/src/client/package.json
+++ b/src/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-rxjs/core": "^0.8.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -10,6 +11,7 @@
     "bootstrap": "^5.1.3",
     "browser-history": "^1.0.1",
     "cors": "^2.8.5",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-bootstrap-form": "^0.1.4-beta6",
@@ -21,8 +23,11 @@
     "react-json-to-html": "^0.0.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-validation": "^3.0.7",
     "styled-components": "^5.3.3",
-    "web-vitals": "^1.1.2"
+    "validator": "^13.7.0",
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
