--- a/src/client/package.json
+++ b/src/client/package.json
@@ -23,6 +23,7 @@
     "react-json-to-html": "^0.0.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-stripe-checkout": "^2.6.3",
     "react-validation": "^3.0.7",
     "styled-components": "^5.3.3",
     "validator": "^13.7.0",
